add test multiplication error if only one or no numbers